--- a/.gitattributes
+++ b/.gitattributes
@@ -34,3 +34,4 @@ saved_model/**/* filter=lfs diff=lfs merge=lfs -text
 *.zst filter=lfs diff=lfs merge=lfs -text
 *tfevents* filter=lfs diff=lfs merge=lfs -text
 movies_metadata.csv filter=lfs diff=lfs merge=lfs -text
+credits.csv filter=lfs diff=lfs merge=lfs -text
