--- a/.gitattributes
+++ b/.gitattributes
@@ -35,3 +35,4 @@ saved_model/**/* filter=lfs diff=lfs merge=lfs -text
 *tfevents* filter=lfs diff=lfs merge=lfs -text
 movies_metadata.csv filter=lfs diff=lfs merge=lfs -text
 credits.csv filter=lfs diff=lfs merge=lfs -text
+ratings.csv filter=lfs diff=lfs merge=lfs -text
